some UI improvement on dahsboard

--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -660,26 +660,26 @@ Administration -> Home
                 console.log(data);
                 $('#stats-result').html(`
                         <h5 class="fw-semibold mb-2">
-                            New Registrations Today: <span class="fs-4 text-success">${data.users_registered_today}</span>
+                            New Registrations Today: <span class="badge bg-dark float-end fs-4 text-success">${data.users_registered_today}</span>
                         </h5>
 
                         <h5 class="fw-semibold mb-2">
-                            Active Students Today: <span class="fs-4 text-success">${data.users_logged_in_today}</span>
+                            Active Students Today: <span class="badge bg-dark float-end fs-4 text-success">${data.users_logged_in_today}</span>
                         </h5>
                         
                         <hr>
                         <h5 class="fw-semibold mb-2">
-                            FLAMES Today🔥: <span class="fs-4 text-success">${data.flames_registered_today}</span>
+                            FLAMES Today🔥: <span class="badge bg-dark float-end fs-4 text-success">${data.flames_registered_today}</span>
                         </h5>
 
                         <h5 class="fw-semibold mb-2">
-                            FLAMES Total🔥: <span class="fs-4 text-success">${data.total_flames_registrations}</span>
+                            FLAMES Total🔥: <span class="badge bg-dark float-end fs-4 text-success">${data.total_flames_registrations}</span>
                         </h5>
                         
                         <!-- <hr>
 
                         <h5 class="fw-semibold mb-2">
-                            Birthday: <span class="fs-3 text-success">${data.students_birthday_today.map(student => student.first_name + student.last_name).join(', ')} 🎉</span>
+                            Birthday: <span class="badge bg-dark float-end fs-3 text-success">${data.students_birthday_today.map(student => student.first_name + student.last_name).join(', ')} 🎉</span>
                         </h5> -->
 
                     `);
