fixed journey section on home page

--- a/templates/home/flames.html
+++ b/templates/home/flames.html
@@ -412,7 +412,7 @@ F.L.A.M.E.S🔥 | Angaar
 
     @media (max-width: 576px) {
         .team-page-container {
-            padding: 60px 0;
+            padding: 22% 0;
         }
 
         .team-grid {
@@ -517,7 +517,7 @@ F.L.A.M.E.S🔥 | Angaar
                         <span style="color: #aaa; font-size: 14px; text-decoration: line-through; margin-right: 10px;">₹ UNAFFORDABLE</span>
                         <span style="color: #ff6026; font-size: 16px; font-weight: 600;">₹ Less than you expect... (coming soon)</span>
                     </div> -->
-                </div>
+                    </div>
                 </div>
 
                 <div style="display: flex; justify-content: space-between; gap: 10px;">
@@ -533,9 +533,9 @@ F.L.A.M.E.S🔥 | Angaar
             </div>
 
             {% endfor %}
-        </div>
-    </div>
-</div>
+                    </div>
+                    </div>
+                </div>
 
 <!-- Registration Modal -->
 <div id="registrationModal" class="registration-modal">
@@ -550,15 +550,15 @@ F.L.A.M.E.S🔥 | Angaar
             <div class="registration-form-group">
                 <label for="full_name" class="registration-form-label">Full Name *</label>
                 <input type="text" id="full_name" name="full_name" class="registration-form-control" required>
-            </div>
+                    </div>
             <div class="registration-form-group">
                 <label for="email" class="registration-form-label">Email Address *</label>
                 <input type="email" id="email" name="email" class="registration-form-control" required>
-            </div>
+                </div>
             <div class="registration-form-group">
                 <label for="contact_number" class="registration-form-label">Contact Number *</label>
                 <input type="tel" id="contact_number" name="contact_number" class="registration-form-control" required>
-            </div>
+                </div>
             <div class="registration-form-group">
                 <label for="college" class="registration-form-label">College/University *</label>
                 <input type="text" id="college" name="college" class="registration-form-control" required>
@@ -574,7 +574,7 @@ F.L.A.M.E.S🔥 | Angaar
                     <option value="5th Year">5th Year</option>
                     <option value="Graduate">Graduate</option>
                 </select>
-            </div>
+        </div>
             <button type="submit" id="submitRegistration" class="registration-form-submit">All Set!</button>
         </form>
     </div>
